--- a/package.json
+++ b/package.json
@@ -39,5 +39,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "classy-nav": "^0.4.0",
+    "css-loader": "^4.3.0",
+    "prop-types": "^15.7.2",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^1.3.0"
   }
 }
