--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "classy-nav": "^0.4.0",
     "css-loader": "^4.3.0",
     "prop-types": "^15.7.2",
+    "classy-nav": "^0.4.0",
+    "css-loader": "^4.3.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.3.0"
   }
