--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "wbdv-finalproject",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.3",
