--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "serve": "^11.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,8 +54,6 @@
     "classy-nav": "^0.4.0",
     "css-loader": "^4.3.0",
     "prop-types": "^15.7.2",
-    "classy-nav": "^0.4.0",
-    "css-loader": "^4.3.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.3.0"
   }
